# celery-sample

./: README.md  docker-compose.yaml  main.py  pyproject.toml  redis.conf
src/celery_sample/: main.py
src/celery_sample/consumer/: celeryconfig.py  main.py
src/celery_sample/consumer/actions/: heavy_lifting.py
src/celery_sample/consumer/bootstrap/: container.py  heavy_lifting_request.py
src/celery_sample/producer/: celeryconfig.py  main.py  router.py
src/celery_sample/producer/actions/: send_message.py
src/celery_sample/producer/bootstrap/: bootstrap.py  containers.py
