[project]
name = "celery-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "celery>=5.5.3",
    "dependency-injector>=4.48.0",
    "fastapi[standard]>=0.115.12",
    "flower>=2.0.1",
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 79
indent-width = 4
src = ["src/celery_sample"]
target-version = "py313"

lint.select = ["ALL"]
lint.ignore = [
    "D",
    # identitcal by code != identical by meaning
    "SIM114",

    # awful things, never use.
    # It makes runtime work differently from typechecker
    "TC001",
    "TC002",
    "TC003",

    # only affects perfomance and brings nothing useful
    "UP038",
]
# Sort in alphabet order
lint.extend-select = ["I"]
